Fixed alignment of content within films and responsiveness

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,9 +1,5 @@
 /* TABLET*/
 @media screen and (max-width: 1000px) and (max-height: 830px) {
-	.main-page, .main-container {
-		background-image: var(--background-image-tablet);
-	}
-
 	.headline {
 		font-size: var(--font-size-xl);
 	}
@@ -31,65 +27,65 @@
 }
 
 @media screen and (max-width: 930px) {
+	.sub-container {
+		overflow-y: scroll;
+		flex-wrap: nowrap;
+		gap: var(--spacing-small);
+		justify-content: flex-start;
+	}
+
 	.contentContainer {
-		height: 6.25rem;
+		height: 10rem;
 		width: 40.625rem;
 	}
 
 	.header {
-		margin-bottom: var(--spacing-small);
+		min-height: 4rem;
 	}
 
 	.contentText {
 		font-size: var(--font-size-base);
-	}
-
-	.contentImage {
-		height: 3.75rem;
-		width: 3.75rem;
-	}
-
-	.sub-container {
-		height: 90vh;
-		flex-wrap: nowrap;
-		gap: var(--spacing-small);
 	}
 }
 
 /* MAKING API CONTENT SMALLER TO FIT SCREEN */
 @media screen and (max-width: 660px) {
 	.back-button {
-		grid-column: 3 / 4;
 		width: 3rem;
 		height: 2rem;
 		font-size: var(--font-size-base);
-		margin-right: var(--spacing-base);
 	}
 
 	.headline {
 		font-size: var(--font-size-medium);
 	}
-	
+
 	.headline-content {
 		font-size: var(--font-size-small);
 	}
 
-	.back-button {	
+	.back-button {
 		width: 5rem;
 		height: 2rem;
 	}
 
 	.contentContainer {
 		width: 21.875rem;
+		height: 11rem;
+	}
+
+	.infoSection {
+		padding: 0;
 	}
 
 	.contentImage {
 		margin-right: var(--spacing-small);
 	}
 
-	.contentText {
-		padding: var(--spacing-tiny);
-	}	
+	.contentImage img {
+		height: 5rem;
+		width: 5rem;
+	}
 
 	.error-message {
 		width: 21.875rem;
@@ -99,12 +95,8 @@
 /*MOBILE*/
 
 @media screen and (max-width: 480px) {
-	.main-page, .main-container {
-		background-image: var(--background-image-mobile);
-	}
-
 	.headline {
-		font-size: var(--font-size-medium);
+		font-size: var(--font-size-medium-small);
 	}
 
 	.info-text {
@@ -123,7 +115,9 @@
 		text-align: center;
 		justify-content: center;
 	}
+
+	.sub-container {
+		overflow-y: scroll;
+		padding: 1rem;
+	}
 }
-
-
-
